contrast issues fix

--- a/styles/base.css
+++ b/styles/base.css
@@ -31,7 +31,7 @@ body {
 
 header {
   background: var(--mushroom);
-  color: var(--white);
+  color: var(--text-main);
   padding: 1rem 0 0.5rem;
   text-align: center;
 }
@@ -147,7 +147,7 @@ main > h1 {
 
 footer {
   background: var(--mushroom);
-  color: var(--muted-yellow);
+  color: var(--text-main);
   text-align: center;
   padding: 1rem 0 0.5rem;
   font-size: 1rem;
